--- a/website/pom.xml
+++ b/website/pom.xml
@@ -10,15 +10,9 @@
 
     <name>NCSA security utilities website</name>
     <!-- FIXME change it to the project's website -->
-    <url>http://maven.apache.org/</url>
-    <inceptionYear>2001</inceptionYear>
+    <url>http://ncsa.github.io/security-all</url>
+    <inceptionYear>2012</inceptionYear>
 
-    <distributionManagement>
-        <site>
-            <id>website</id>
-            <url>scp://webhost.company.com/www/website</url>
-        </site>
-    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -54,7 +48,8 @@
 
      </dependencies>
     <build>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+<!--
+        <pluginManagement>
             <plugins>
 
                 <plugin>
@@ -71,6 +66,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+-->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -91,7 +87,20 @@
             </plugin>
         </plugins>
     </build>
-
+    <distributionManagement>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>sonatype</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
+            </url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>sonatype</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
     <reporting>
         <plugins>
             <plugin>
@@ -108,7 +117,7 @@
                 <version>3.0.0</version>
                 <reportSets>
                     <reportSet>
-                        <reports><!-- select reports -->
+                        <reports><!-- select reports &ndash-->
                             <report>index</report>
                             <report>dependencies</report>
                             <report>summary</report>
