Rename of classes. Improved exception handling.

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </properties>
 
     <modules>
-        <module>crypto</module>
+       <!-- <module>crypto</module>-->
         <module>website</module>
         <module>core</module>
         <module>util</module>
