--- a/sas-server/pom.xml
+++ b/sas-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>security-lib</artifactId>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <version>5.2-SNAPSHOT</version>
+        <version>5.2.8.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>servlet</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.8.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -41,13 +41,13 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>storage</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.8.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypto</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
