--- a/sas-server/pom.xml
+++ b/sas-server/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypto</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
