--- a/util/pom.xml
+++ b/util/pom.xml
@@ -130,7 +130,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypto</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -142,7 +142,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypto</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
