--- a/website/pom.xml
+++ b/website/pom.xml
@@ -32,7 +32,7 @@
          <dependency>
              <groupId>edu.uiuc.ncsa.security</groupId>
              <artifactId>crypto</artifactId>
-             <version>5.2-SNAPSHOT</version>
+             <version>5.2.8</version>
          </dependency>
 
          <dependency>
