CIL-1354, CIL-1556, CIL-834. Online documentation in the CLI is now supported. A great deal of it to boot.

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -61,6 +61,11 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
     </build>
     <dependencies>
 
