--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -50,5 +50,10 @@
                  </configuration>
              </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
     </build>
 </project>
