--- a/util/pom.xml
+++ b/util/pom.xml
@@ -68,7 +68,11 @@
         </resources>
     </build>
     <dependencies>
-
+        <dependency>
+          <groupId>xom</groupId>
+          <artifactId>xom</artifactId>
+          <version>1.3.8</version>
+        </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
