--- a/util/pom.xml
+++ b/util/pom.xml
@@ -19,18 +19,22 @@
     <packaging>jar</packaging>
     <build>
         <plugins>
-            <!--<plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-javadoc-plugin</artifactId>
-                 <version>3.4.0</version>
-                 <configuration>
-                     &lt;!&ndash;<aggregate>true</aggregate>&ndash;&gt;
-                     <includeDependencySources>false</includeDependencySources>
-                     <dependencySourceIncludes>
-                         <dependencySourceInclude>edu.uiuc.ncsa.qdl.*</dependencySourceInclude>
-                     </dependencySourceIncludes>
-                 </configuration>
-             </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <doclint>none</doclint>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -54,7 +58,7 @@
                     <includes>
                         <include>**/*Suite.java</include>
                     </includes>
-                  <!--  <forkMode>perTest</forkMode>-->
+                    <!--  <forkMode>perTest</forkMode>-->
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
 
