--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,35 +17,35 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-     <dependencies>
-         <dependency>
-             <groupId>commons-configuration</groupId>
-             <artifactId>commons-configuration</artifactId>
-             <version>1.10</version>
-         </dependency>
-         <dependency>
-             <groupId>junit</groupId>
-             <artifactId>junit</artifactId>
-             <version>4.13.1</version>
-             <scope>test</scope>
-         </dependency>
-         <dependency>
-             <groupId>commons-codec</groupId>
-             <artifactId>commons-codec</artifactId>
-             <version>1.11</version>
-         </dependency>
-         <dependency>
-             <groupId>javax.inject</groupId>
-             <artifactId>javax.inject</artifactId>
-             <version>1</version>
-         </dependency>
-         <dependency>
-             <groupId>net.sf.json-lib</groupId>
-             <artifactId>json-lib</artifactId>
-             <version>2.4</version>
-             <classifier>jdk15</classifier>
-         </dependency>
-     </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -56,10 +56,10 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
-<!--                    <includes>
-                        <include>**/*Suite.java</include>
-                    </includes>-->
-                  <!--  <forkMode>perTest</forkMode>-->
+                    <!--                    <includes>
+                                            <include>**/*Suite.java</include>
+                                        </includes>-->
+                    <!--  <forkMode>perTest</forkMode>-->
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                 </configuration>
@@ -76,7 +76,22 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <doclint>none</doclint>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
