--- a/sas-server/pom.xml
+++ b/sas-server/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>crypto</artifactId>
+            <artifactId>crypt8</artifactId>
             <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
