--- a/util/pom.xml
+++ b/util/pom.xml
@@ -134,7 +134,7 @@
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>crypto</artifactId>
+            <artifactId>crypt8</artifactId>
             <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
@@ -146,7 +146,7 @@
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>crypto</artifactId>
+            <artifactId>crypt8</artifactId>
             <version>5.2.8</version>
             <scope>compile</scope>
         </dependency>
