--- a/website/pom.xml
+++ b/website/pom.xml
@@ -31,7 +31,7 @@
 
          <dependency>
              <groupId>edu.uiuc.ncsa.security</groupId>
-             <artifactId>crypto</artifactId>
+             <artifactId>crypt8</artifactId>
              <version>5.2.8</version>
          </dependency>
 
