Update to allow for Sonatype release. Crypt-8 is based on this version and projects using Crypt-8 were complaining that there was no 5.2.8 pom in maven, so we added one.

--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,9 @@
 
     <url>http://www.ncsa.illinois.edu</url>
     <scm>
-        <developerConnection>
-            scm:svn:https://jeff92@svn.code.sf.net/p/cilogon/code/trunk/edu.uiuc.ncsa/ncsa-security-all
-        </developerConnection>
-        <connection>scm:svn:https://jeff92@svn.code.sf.net/p/cilogon/code/trunk/edu.uiuc.ncsa/ncsa-security-all
-        </connection>
-        <url>scm:svn:https://jeff92@svn.code.sf.net/p/cilogon/code/trunk/edu.uiuc.ncsa/ncsa-security-all</url>
+        <developerConnection>scm:git:https://github.com/ncsa/security-lib</developerConnection>
+        <connection>scm:git:https://github.com/ncsa/security-lib</connection>
+        <url>scm:git:https://github.com/ncsa/security-lib</url>
     </scm>
     <licenses>
         <license>
@@ -87,7 +84,7 @@
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
                 <configuration>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
@@ -103,19 +100,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.0</version>
-
-                <configuration>
-                    <includeDependencySources>true</includeDependencySources>
-                    <failOnError>false</failOnError>
-                    <excludePackageNames>org.*;com.*</excludePackageNames>
-                </configuration>
+                <version>3.5.0</version>
+                <executions>
+                       <execution>
+                           <id>attach-javadocs</id>
+                           <goals>
+                               <goal>jar</goal>
+                           </goals>
+                       </execution>
+                   </executions>
             </plugin>
 
         </plugins>
 
     </build>
-    <distributionManagement>
+  <!--  <distributionManagement>
         <repository>
             <id>sonatype-nexus-staging</id>
             <name>sonatype</name>
@@ -137,7 +136,7 @@
                    <version>3.0.0</version>
                    <reportSets>
                        <reportSet>
-                           <reports><!-- select reports -->
+                           <reports>&lt;!&ndash; select reports &ndash;&gt;
                                <report>index</report>
                                <report>dependencies</report>
                                <report>summary</report>
@@ -171,5 +170,5 @@
                    
                </plugin>
            </plugins>
-       </reporting>
+       </reporting>-->
 </project>
