--- a/website/pom.xml
+++ b/website/pom.xml
@@ -12,6 +12,8 @@
     <!-- FIXME change it to the project's website -->
     <url>http://ncsa.github.io/security-all</url>
     <inceptionYear>2012</inceptionYear>
+    <packaging>pom</packaging>
+    <description>Website for the NCSA Security Library.</description>
 
 
     <properties>
@@ -48,26 +50,24 @@
 
      </dependencies>
     <build>
-<!--
-        <pluginManagement>
-            <plugins>
-
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.12.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.0.0</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
--->
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -102,52 +102,48 @@
         </snapshotRepository>
     </distributionManagement>
     <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.12.0</version>
-                <configuration>
-                    <locales>en</locales>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.0.0</version>
-                <reportSets>
-                    <reportSet>
-                        <reports><!-- select reports &ndash-->
-                            <report>index</report>
-                            <report>dependencies</report>
-                            <report>summary</report>
-                            <report>mailing-lists</report>
-                            <report>licenses</report>
-                            <report>scm</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <version>3.4.0</version>
-              <reportSets>
-                <reportSet>
-                  <id>aggregate</id>
-                  <inherited>false</inherited>
-                  <reports>
-                    <report>aggregate</report>
-                  </reports>
-                </reportSet>
-                <reportSet>
-                  <id>default</id>
-                  <reports>
-                    <report>javadoc</report>
-                  </reports>
-                </reportSet>
-              </reportSets>
-            </plugin>
-        </plugins>
-    </reporting>
+           <plugins>
+               <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-javadoc-plugin</artifactId>
+                   <version>3.4.0</version>
+                   <configuration>
+                       <outputDirectory>${project.build.directory}/docs/apidocs</outputDirectory>
+                   </configuration>
+                   <reportSets>
+                       <reportSet>
+                           <id>aggregate</id>
+                           <inherited>false</inherited>
+                           <reports>
+                               <report>aggregate</report>
+                           </reports>
+                       </reportSet>
+                       <reportSet>
+                           <id>default</id>
+                           <reports>
+                               <report>javadoc</report>
+                           </reports>
+                       </reportSet>
+                   </reportSets>
+               </plugin>
+           </plugins>
+       </reporting>
+    <licenses>
+        <license>
+            <name>Apache license</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Jeff Gaynor</name>
+            <email>gaynor@illinois.edu</email>
+        </developer>
+    </developers>
+    <scm>
+        <developerConnection>scm:git:https://github.com/ncsa/security-lib</developerConnection>
+        <connection>scm:git:https://github.com/ncsa/security-lib</connection>
+        <url>scm:git:https://github.com/ncsa/security-lib</url>
+    </scm>
 </project>
