--- a/sas-server/pom.xml
+++ b/sas-server/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypt8</artifactId>
-            <version>5.2.8</version>
+            <version>5.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
