--- a/util/pom.xml
+++ b/util/pom.xml
@@ -68,6 +68,12 @@
         </resources>
     </build>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.37</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-codec</groupId>
@@ -135,7 +141,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypt8</artifactId>
-            <version>5.2.8</version>
+            <version>5.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -147,7 +153,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypt8</artifactId>
-            <version>5.2.8</version>
+            <version>5.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
