--- a/util/pom.xml
+++ b/util/pom.xml
@@ -126,6 +126,7 @@
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
             <version>1.6.7</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--   Following commented out bits are for trying to get Jakarta mail to
