--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>security-lib</artifactId>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <version>5.3-SNAPSHOT</version>
+        <version>5.4.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
