--- a/util/pom.xml
+++ b/util/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>security-lib</artifactId>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <version>5.3-SNAPSHOT</version>
+        <version>5.4.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -164,7 +164,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>5.3-SNAPSHOT</version>
+            <version>5.4.2</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -197,19 +197,19 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypt8</artifactId>
-            <version>5.3-SNAPSHOT</version>
+            <version>5.4.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>5.3-SNAPSHOT</version>
+            <version>5.4.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>crypt8</artifactId>
-            <version>5.3-SNAPSHOT</version>
+            <version>5.4.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
