--- a/website/pom.xml
+++ b/website/pom.xml
@@ -32,7 +32,7 @@
          <dependency>
              <groupId>edu.uiuc.ncsa.security</groupId>
              <artifactId>crypt8</artifactId>
-             <version>5.3-SNAPSHOT</version>
+             <version>5.4.2</version>
          </dependency>
 
          <dependency>
