--- a/util/pom.xml
+++ b/util/pom.xml
@@ -172,11 +172,11 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
-
+        <!-- fix https://github.com/ncsa/security-lib/issues/39 -->
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline</artifactId>
-            <version>3.14.1</version>
+            <version>3.26.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
