--- a/web-installer/src/main/resources/ncsa/jar-test.yaml
+++ b/web-installer/src/main/resources/ncsa/jar-test.yaml
@@ -1,6 +1,14 @@
-- sourceURL: https://github.com/ncsa/qdl/releases/download/v1.5.5
+- sourceURL: https://github.com/ncsa/oa4mp/releases/download/mutable/
   directories:
-  - files: [qdl-installer.jar]
+  - permissions:
+    - {preprocess: true, update: false, source: etc/cfg.xml}
+    - {preprocess: true, update: false, source: bin/cli, exec: true}
+    - {preprocess: true, update: false, source: bin/jwt, exec: true}
+    - {preprocess: true, update: false, source: bin/migrate, exec: true}
+    - {preprocess: true, update: false, source: etc/create_keys.cmd}
+    - {update: false, source: etc/oa4mp-message.template}
+    - {update: false, source: etc/oa4mp-subject.template}
+    files: [oa4mp-install.jar]
+    ignore: [/META-INF/]
     target_dir: /
-    ignore: [/META-INF/, /edu/, /dir_list.txt, /file_list.txt]
   type: zip
