--- a/web-installer/buildNumber.properties
+++ b/web-installer/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Tue Jan 07 16:01:43 CST 2025
-buildNumber\\d*=642
+#Fri Apr 11 16:24:10 CDT 2025
+buildNumber\\d*=739
