--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>security-lib</artifactId>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <version>6.x-SNAPSHOT</version>
+        <version>6.1-rc0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,12 +21,12 @@
          <dependency>
              <groupId>edu.uiuc.ncsa.security</groupId>
              <artifactId>core</artifactId>
-             <version>6.x-SNAPSHOT</version>
+             <version>6.1-rc0</version>
          </dependency>
          <dependency>
              <groupId>edu.uiuc.ncsa.security</groupId>
              <artifactId>util</artifactId>
-             <version>6.x-SNAPSHOT</version>
+             <version>6.1-rc0</version>
          </dependency>
          <dependency>
              <groupId>javax.servlet</groupId>
