--- a/web-installer/pom.xml
+++ b/web-installer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
         <artifactId>security-lib</artifactId>
-        <version>6.x-SNAPSHOT</version>
+        <version>6.1-rc0</version>
     </parent>
 
     <artifactId>web-installer</artifactId>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.1-rc0</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
