Batch file processign with indices. This should be kept, but probably best replaced by hijacking System.in

--- a/web-installer/pom.xml
+++ b/web-installer/pom.xml
@@ -31,13 +31,13 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>5.5</version>
+            <version>6.x-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>5.5</version>
+            <version>6.x-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
