--- a/web-installer/pom.xml
+++ b/web-installer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
         <artifactId>security-lib</artifactId>
-        <version>6.x-SNAPSHOT</version>
+        <version>6.2</version>
     </parent>
 
     <artifactId>web-installer</artifactId>
@@ -26,18 +26,18 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
