https://github.com/ncsa/security-lib/issues/57 so this now can be uploaded to Maven Central

--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storage</artifactId>
+    <name>storage</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
