--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </properties>
 
     <modules>
-        <module>website</module>
+	     <module>website</module>
         <module>core</module>
         <module>util</module>
         <module>servlet</module>
@@ -50,8 +50,19 @@
         <module>skin</module>
         <module>web-installer</module>
     </modules>
+
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
@@ -86,7 +97,7 @@
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
                 <configuration>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
