--- a/util/pom.xml
+++ b/util/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>security-lib</artifactId>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <version>6.x-SNAPSHOT</version>
+        <version>6.2.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -149,7 +149,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2.2</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -188,7 +188,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>core</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
