--- a/web-installer/buildNumber.properties
+++ b/web-installer/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Mon Oct 27 11:09:22 CDT 2025
-buildNumber\\d*=2162
+#Thu Nov 13 16:23:40 CST 2025
+buildNumber\\d*=2192
